[package]
name = "id-contact-jwt"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-contact-proto = { git="https://github.com/id-contact/id-contact-proto.git" }
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.61"
josekit = "0.7.1"

[dev-dependencies]
serde_yaml = "0.8.16"
