[package]
name = "verder-helpen-jwt"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verder-helpen-proto = { git = "https://github.com/verder-helpen/verder-helpen-proto.git" }
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.91"
josekit = "0.8.1"

[dev-dependencies]
serde_yaml = "0.9.16"
